# swift

./: .bazelrc  .gitattributes  .gitignore  AGENTS.md  BUILD  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.bazel.md  README.md  catalog-info.yaml  mkdocs.yml  user.bazelrc.example
.devcontainer/: Dockerfile  Dockerfile.kitchen-sink  README.md  devcontainer.json  kind-config.yaml
.github/workflows/: _repo-config-apply.yaml  _repo-config-preview.yaml  ci.yaml  license-check.yml  tidy-check.yaml
docs/: build-cache.md  key-rotation.md  remote-build.md
docs/dependency-versioning/: index.md  swift.md
githooks/: pre-commit
hello/swift/: BUILD.bazel  Greeting.swift  main.swift
infrastructure/pulumi/repo_config/: .gitignore  BUILD  Pulumi.yaml  README.md  go.mod  main.go
swift/: BUILD  BUILD.bazel  defs.bzl
tools/: tools.lock.json
tools/format/: BUILD  prettier_wrapper.sh
tools/license/: BUILD.bazel  defs.bzl
tools/lint/: linters.bzl
tools/pulumi/: BUILD  create_app.sh  defs.bzl  pulumi_cmd.sh  pulumi_setup.sh
tools/remote/: BUILD  setup.sh
tools/scripts/: copilot  gemini  kind-cluster.sh
