# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)  # force a recent version that works with v3
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# Aggregates //:gazelle (+ python manifest) and //tools/format into //:tidy.
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "gazelle", version = "0.47.0")

# rules_shell is unconditional: the always-shipped `//tools/remote:setup` sh_binary
# (remote-build setup helper) needs it even when "Shell" isn't a selected language.
bazel_dep(name = "rules_shell", version = "0.6.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Support for Swift, see https://github.com/bazelbuild/rules_swift
# Generic cross-platform Swift only (no rules_apple / .app bundling).
#
# HERMETIC on Linux: the rules_swift `swift` bzlmod extension downloads a
# standalone Swift toolchain from swift.org, so CI and Linux developers need NO
# host `swift` install (no swift-actions/setup-swift). NOTE: that extension is
# only on rules_swift `main` (not the 3.6.1 release), so it is pinned via
# git_override until it ships in a release -- then drop the override and bump the
# bazel_dep version. (`CC=clang` is still required: the Swift toolchain links via
# the configured CC toolchain, and rules_swift requires that to be clang.)
#
# macOS keeps the Xcode-based host toolchain (registered LAST as a fallback): the
# hermetic Linux toolchains are registered FIRST so they win toolchain resolution
# on Linux, while macOS falls through to the host toolchain. Apple's SDK isn't
# redistributable, so macOS Swift is Xcode-bound regardless.
bazel_dep(name = "rules_swift", version = "3.6.1", repo_name = "build_bazel_rules_swift")
git_override(
    module_name = "rules_swift",
    # main @ 2026-05-22; first ref carrying the hermetic `swift` toolchain
    # extension (PR #1630). Swap for a stable release once one ships with it.
    commit = "f9f6fc9e308a18bfb2ea4797fea6c52fe134b980",
    remote = "https://github.com/bazelbuild/rules_swift.git",
)

swift = use_extension("@build_bazel_rules_swift//swift:extensions.bzl", "swift")
swift.toolchain(
    name = "swift_toolchain",
    swift_version = "6.2.3",
)
use_repo(
    swift,
    "swift_toolchain",
    "swift_toolchain_ubuntu24.04",
    "swift_toolchain_ubuntu24.04-aarch64",
)

# Hermetic Linux toolchains FIRST (win on Linux); host toolchain LAST (macOS/Xcode
# fallback, also keeps the registration visible at the repo root).
register_toolchains(
    "@swift_toolchain//:swift_toolchain_exec_ubuntu24.04",
    "@swift_toolchain//:swift_toolchain_exec_ubuntu24.04-aarch64",
)

register_toolchains("@build_bazel_rules_swift//swift/toolchains:all")

# SwiftFormat binary used by rules_lint's format_multirun (see tools/format/BUILD).
# rules_lint vendors nicklockwood/SwiftFormat via this module extension.
format_tools = use_extension("@aspect_rules_lint//format:extensions.bzl", "tools")
format_tools.swiftformat()
use_repo(format_tools, "swiftformat", "swiftformat_mac")

register_toolchains("//tools/toolchains:all")
