bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.7.2")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")

# buildifier (Starlark formatter) is always available — the `aspect buildifier`
# task and the format.alias in .aspect/config.axl use it regardless of lint.
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")

# Prebuilt aspect gazelle binary (no Go toolchain needed) — provides
# //tools/gazelle:gazelle, the default target for `aspect gazelle`.
bazel_dep(name = "aspect_gazelle_prebuilt", version = "0.0.20")

# NB: 2.7.0's sarif_parser toolchain is missing the linux_amd64 platform key
# (breaks lint/format on Linux CI: "key sarif_parser-linux_amd64 not found").
# Stay on 2.6.0 until that's fixed upstream.
bazel_dep(name = "aspect_rules_lint", version = "2.7.1")

# bazel_skylib's native_binary backs //tools/lint's linter wrappers.
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# rules_shell is unconditional: the always-shipped //tools/pulumi macro emits
# sh_binary wrappers (pulumi run targets) even when "shell" isn't a selected language.
bazel_dep(name = "rules_shell", version = "0.8.0")

# go preset uses rules_go directly; the lint preset needs this floor too because
# aspect_rules_lint -> rules_buf transitively pulls an ancient rules_go (0.42.0)
# whose cgo.bzl references the removed CcInfo symbol and fails to load.
bazel_dep(name = "rules_go", version = "0.61.1")

# Support for Swift, see https://github.com/bazelbuild/rules_swift. Generic
# cross-platform Swift only (no rules_apple / .app bundling). HERMETIC on Linux:
# the rules_swift `swift` bzlmod extension (below) downloads a standalone
# toolchain from swift.org, so CI and Linux developers need NO host `swift`. That
# extension is only on rules_swift `main` (not the 3.6.1 release), so it is pinned
# via git_override until it ships in a release -- then drop the override and bump
# the version. (`CC=clang` is still required: the Swift toolchain links via the
# configured CC toolchain, which rules_swift requires to be clang.)

# //swift's config_settings reference @platforms//{os,cpu}; oci presets already
# declare this, so only add it when oci is off (avoids a duplicate bazel_dep).
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_swift", version = "3.6.1", repo_name = "build_bazel_rules_swift")
git_override(
    module_name = "rules_swift",
    # main @ 2026-05-22; first ref carrying the hermetic `swift` toolchain
    # extension (PR #1630). Swap for a stable release once one ships with it.
    commit = "f9f6fc9e308a18bfb2ea4797fea6c52fe134b980",
    remote = "https://github.com/bazelbuild/rules_swift.git",
)

###############################################################################
# Module extensions
###############################################################################

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Swift toolchains: hermetic Linux toolchains from swift.org (registered FIRST so
# they win on Linux); macOS falls through to the host Xcode toolchain (registered
# LAST) since Apple's SDK isn't redistributable.
swift = use_extension("@build_bazel_rules_swift//swift:extensions.bzl", "swift")
swift.toolchain(
    name = "swift_toolchain",
    swift_version = "6.2.3",
)
use_repo(
    swift,
    "swift_toolchain",
    "swift_toolchain_ubuntu24.04",
    "swift_toolchain_ubuntu24.04-aarch64",
)

register_toolchains(
    "@swift_toolchain//:swift_toolchain_exec_ubuntu24.04",
    "@swift_toolchain//:swift_toolchain_exec_ubuntu24.04-aarch64",
)

register_toolchains("@build_bazel_rules_swift//swift/toolchains:all")

register_toolchains("//bazel/toolchains:all")
