load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//swift:defs.bzl", "swift_binary")

swift_library(
    name = "greeting",
    srcs = ["Greeting.swift"],
    module_name = "Greeting",
    visibility = ["//visibility:public"],
)

# Uses the //swift:defs.bzl wrapper so the hermetic Swift runtime is staged on Linux.
# NB: no swift_test here — rules_swift's swift_test doesn't stage the hermetic
# runtime on Linux (our wrapper only covers swift_binary), and XCTest-on-Linux
# under the hermetic toolchain needs more plumbing. The sample demonstrates
# build + run; add a test once the runtime-staging wrapper covers swift_test.
swift_binary(
    name = "hello",
    srcs = ["main.swift"],
    deps = [":greeting"],
)
