"""
License header enforcement via addlicense.

Usage:
  bazel run //tools/license:add    — add/fix missing license headers
  bazel run //tools/license:check  — verify all headers present (exit non-zero if missing)

Both targets are `bazel run` targets (not `bazel test`). A generated launcher
script cd's to $BUILD_WORKSPACE_DIRECTORY before calling addlicense so the tool
scans the real workspace tree (Bazel 7+ runs binaries from the runfiles
directory, not the workspace root; $BUILD_WORKSPACE_DIRECTORY holds the
workspace path).

NOTE: `:check` must be invoked via `bazel run`, not `bazel test`, because
`bazel test` runs in a sandbox with no access to the live source tree. CI
(license-check.yml) invokes `bazel run //tools/license:check`. Headers are
applied to the rendered tree at delivery (`bazel run //tools/license:add`).
"""

load("//tools/license:defs.bzl", "addlicense_run_target")

# Glob patterns passed as -ignore flags to addlicense (generated / tool-managed
# files that should not receive license headers). Each entry is a separate
# -ignore <pattern> pair in the generated launcher's arg array.
_IGNORE_GLOBS = [
    "**/*.lock",
    "**/pnpm-lock.yaml",
    "**/package-lock.json",
    "**/Cargo.lock",
    "**/uv.lock",
    "MODULE.bazel.lock",
    "**/*-baseline.xml",
    "**/.release-please-manifest.json",
    "bazel-*/**",
    "**/node_modules/**",
    "**/*.venv/**",
    ".git/**",
    "**/BUILD",
    "**/BUILD.bazel",
    # Bazel module and repo manifests (declaration files, not source)
    "MODULE.bazel",
    "MODULE.aspect",
    "REPO.bazel",
    # AXL renderer/config files
    "**/*.axl",
    # Tool/formatter configuration files
    ".rubocop.yml",
    ".clippy.toml",
    "prettier.config.cjs",
    "pmd.xml",
    "pyproject.toml",
    "mkdocs.yml",
    "**/pnpm-workspace.yaml",
    "Gemfile",
    "Cargo.toml",
    # Backstage catalog descriptor
    "catalog-info.yaml",
    # Devcontainer files
    ".devcontainer/**",
    # Pulumi per-stack config (tool-managed; matches Pulumi.dev.yaml but NOT the
    # headered project Pulumi.yaml).
    "**/Pulumi.*.yaml",
]

# The new engine ships Apache-2.0 (the `license` flag is Apache-2.0-or-none),
# so the addlicense template is always "apache". Edit `_COPYRIGHT` to set your
# organization's copyright holder; it defaults to the project name.
_LICENSE_FLAG = "apache"

_COPYRIGHT = "MyProject"

# bazel run //tools/license:add — write/fix missing license headers.
addlicense_run_target(
    name = "add",
    check_mode = False,
    copyright = _COPYRIGHT,
    ignore_globs = _IGNORE_GLOBS,
    license_flag = _LICENSE_FLAG,
    visibility = ["//visibility:public"],
)

# bazel run //tools/license:check — exit non-zero if any headers are missing.
addlicense_run_target(
    name = "check",
    check_mode = True,
    copyright = _COPYRIGHT,
    ignore_globs = _IGNORE_GLOBS,
    license_flag = _LICENSE_FLAG,
    visibility = ["//visibility:public"],
)
